# openplc-cli

./: README.md  openplc-cli.py  openplc_client.py  pyproject.toml  requirements.txt
src/openplc_cli/: cli.py  pyopenplc.py
